[gd_scene load_steps=4 format=3 uid="uid://b2kwywolltop3"]

[ext_resource type="Texture2D" uid="uid://d78p4tm1p3g0" path="res://Assets/Board.png" id="1_bw0lp"]
[ext_resource type="Script" path="res://chess.gd" id="2_x0rnw"]
[ext_resource type="Texture2D" uid="uid://5f33pfde4ts0" path="res://Assets/tile_marking_white_perspective.png" id="3_8uucb"]

[node name="Board" type="Sprite2D"]
scale = Vector2(0.0937888, 0.0888199)
texture = ExtResource("1_bw0lp")
script = ExtResource("2_x0rnw")

[node name="white_perspective" type="Sprite2D" parent="."]
texture = ExtResource("3_8uucb")

[node name="black_perspective" type="Sprite2D" parent="."]

[node name="Pieces" type="Node2D" parent="."]

[node name="Available_Moves" type="Node2D" parent="."]
